Bug 422480 - Search widget in the Budgets view ignores user input
Summary: Search widget in the Budgets view ignores user input
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-05 11:49 UTC by Robert Szczesiak
Modified: 2020-06-05 17:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.0
Sentry Crash Report:


Attachments
Sample file - budget_test.kmy (1.65 KB, application/x-kmymoney)
2020-06-05 11:49 UTC, Robert Szczesiak
Details
Search widget in the Budgets view ignoring user input (25.12 KB, image/png)
2020-06-05 11:49 UTC, Robert Szczesiak
Details
Fixed search widget in the Budgets view (17.67 KB, image/png)
2020-06-05 11:56 UTC, Robert Szczesiak
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Szczesiak 2020-06-05 11:49:12 UTC
Created attachment 129072 [details]
Sample file - budget_test.kmy

SUMMARY
All Income and Expense categories are displayed in the Budgets view, irrespective of what the user enters in the search widget.

STEPS TO REPRODUCE
1. Open the attached sample file 'budget_test.kmy'
2. Go to the Budgets view and type 'search' in the search widget on the right-hand side.

OBSERVED RESULT
All Income and Expense categories are displayed.

EXPECTED RESULT
Only 'My Test Expense To Search' category should be displayed.

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.18.4
KDE Frameworks Version: 5.70.0
Qt Version: 5.14.2

ADDITIONAL INFORMATION
Please find attached a screenshot presenting the issue.
Comment 1 Robert Szczesiak 2020-06-05 11:49:49 UTC
Created attachment 129073 [details]
Search widget in the Budgets view ignoring user input
Comment 2 Robert Szczesiak 2020-06-05 11:56:15 UTC
Created attachment 129074 [details]
Fixed search widget in the Budgets view
Comment 3 Thomas Baumgart 2020-06-05 17:45:12 UTC
Git commit a6fd92a8c05d10a8f3c2790bbfbd6cee62683186 by Thomas Baumgart, on behalf of Robert Szczesiak.
Committed on 05/06/2020 at 17:45.
Pushed by tbaumgart into branch 'master'.

Fix search widget in the Budgets view ignoring user input

All Income and Expense categories were displayed in the Budgets view,
irrespective of what the user entered in the search widget.

This commit fixes budget category filtering.
Signed-off-by: Robert Szczesiak <dev.rszczesiak@gmail.com>

M  +3    -2    kmymoney/widgets/budgetviewproxymodel.cpp

https://invent.kde.org/office/kmymoney/commit/a6fd92a8c05d10a8f3c2790bbfbd6cee62683186
Comment 4 Thomas Baumgart 2020-06-05 17:49:03 UTC
Git commit c26e73b1b51b3e3cd6b6470c3efae440aaa84761 by Thomas Baumgart.
Committed on 05/06/2020 at 17:48.
Pushed by tbaumgart into branch '5.1'.

Fix search widget in the Budgets view ignoring user input

All Income and Expense categories were displayed in the Budgets view,
irrespective of what the user entered in the search widget.

This commit fixes budget category filtering.
FIXED-IN: 5.1.0

Signed-off-by: Robert Szczesiak <dev.rszczesiak@gmail.com>
(cherry picked from commit a6fd92a8c05d10a8f3c2790bbfbd6cee62683186)

M  +3    -2    kmymoney/widgets/budgetviewproxymodel.cpp

https://invent.kde.org/office/kmymoney/commit/c26e73b1b51b3e3cd6b6470c3efae440aaa84761