Fix search widget in the Budgets view ignoring user input

All Income and Expense categories were displayed in the Budgets view,
irrespective of what the user entered in the search widget.

This commit fixes budget category filtering.

BUG: 422480
Signed-off-by: Robert Szczesiak <dev.rszczesiak@gmail.com>